# prompt_basic_20250618

./: .langchain_cache.db  2.모델성능테스트.ipynb  3.langchain_basic.ipynb  4.langchain_template.ipynb  5.langchain_parser.ipynb  6.pinecone_test.ipynb  pyproject.toml
