[project]
name = "prompt-basic-20250618"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.54.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.24",
    "langchain-pinecone>=0.2.8",
    "notebook>=7.4.3",
    "pinecone>=7.2.0",
    "python-dotenv>=1.1.0",
]
